--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <meta name="author" content="SemiColonWeb" />
 
   <!-- Stylesheets
   ============================================= -->
@@ -20,7 +19,7 @@
 
   <!-- Document Title
   ============================================= -->
-  <title>Blank Page | Canvas</title>
+  <title>CAS</title>
 
 </head>
 
@@ -33,19 +32,99 @@
   <!-- Content
   ============================================= -->
   <section id="content">
-    <div class="content-wrap">
+    <div class="content-wrap py-5">
+      <div class="section dark bg-color" style="padding: 100px 0;">
+        <div class="container">
+          <div class="heading-block mw-xs mx-auto text-center mb-6">
+            <h5 class="font-body text-uppercase ls2 color-2">What we do</h5>
+            <h3 class="text-white nott ls0">Beware of Little Expenses, a small leak will sink a Great Ship.</h3>
+          </div>
+          <div class="services-grid gutter-30 position-relative">
+            <div style="background-image: url(demos/finance/images/grid.svg); position: absolute; top: 50%; left: 50%; width: 50vw; height: 50vh; opacity: .15; transform: translate(-50%, -50%);"></div>
+            <img class="op-05" src="demos/finance/images/grid.svg" alt="Grid Image" style="position: absolute; left: -20px; top: -30px; z-index: -1;">
+            <div class="row">
+              <div class="col-lg-4 col-md-6 d-flex align-self-stretch">
+                <div class="feature-box flex-column h-shadow mx-0" style="background-image: linear-gradient(#2646532b, #264653f7), url('demos/finance/images/services/1.jpg')">
+                  <div class="fbox-icon mb-4">
+                    <a href="#"><i class="icon-line-dollar-sign color-2"></i></a>
+                  </div>
+                  <div class="fbox-content">
+                    <h4 class="font-body fw-semibold h4 mb-4 mt-2 ls0 nott">Financial Services</h4>
+                    <p>Globally mesh multifunctional without competitive benefits. Synergistically procrastinate effective.</p>
+                    <a href="#" class="hover-button"><u>Read More</u> <i class="icon-line-arrow-right"></i></a>
+                  </div>
+                </div>
+              </div>
 
-      <div class="container center clearfix">
+              <div class="col-lg-4 col-md-6 d-flex align-self-stretch">
+                <div class="feature-box flex-column h-shadow mx-0" style="background-image: linear-gradient(#2646532b, #264653f7), url('demos/finance/images/services/2.jpg')">
+                  <div class="fbox-icon mb-4">
+                    <a href="#"><i class="icon-line-paper color-2"></i></a>
+                  </div>
+                  <div class="fbox-content">
+                    <h4 class="font-body fw-semibold h4 mb-4 mt-2 ls0 nott"> Audit & Taxes</h4>
+                    <p>Appropriately parallel task mission-critical communities after team building quality vectors seamlessly promote.</p>
+                    <a href="#" class="hover-button"><u>Read More</u> <i class="icon-line-arrow-right"></i></a>
+                  </div>
+                </div>
+              </div>
 
-        <div class="heading-block center">
-          <h1>This is a Blank Page</h1>
-          <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos, ratione?</span>
+              <div class="col-lg-4 col-md-6 d-flex align-self-stretch">
+                <div class="feature-box flex-column h-shadow mx-0" style="background-image: linear-gradient(#264653A8, #264653), url('demos/finance/images/services/3.jpg')">
+                  <div class="fbox-icon mb-4">
+                    <a href="#"><i class="icon-line-flag color-2"></i></a>
+                  </div>
+                  <div class="fbox-content">
+                    <h4 class="font-body fw-semibold h4 mb-4 mt-2 ls0 nott"> Business Planning</h4>
+                    <p>Globally deploy cost effective internal, consectetur adipisicing elit. Eligendi rem, facilis nobis voluptatum est.</p>
+                    <a href="#" class="hover-button"><u>Read More</u> <i class="icon-line-arrow-right"></i></a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-4 col-md-6 d-flex align-self-stretch">
+                <div class="feature-box flex-column h-shadow mx-0" style="background-image: linear-gradient(#26465398, #264653), url('demos/finance/images/services/4.jpg')">
+                  <div class="fbox-icon mb-4">
+                    <a href="#"><i class="icon-line-users color-2"></i></a>
+                  </div>
+                  <div class="fbox-content">
+                    <h4 class="font-body fw-semibold h4 mb-4 mt-2 ls0 nott">Acountants Experts</h4>
+                    <p>Globally mesh multifunctional without competitive benefits. Synergistically procrastinate effective.</p>
+                    <a href="#" class="hover-button"><u>Read More</u> <i class="icon-line-arrow-right"></i></a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-4 col-md-6 d-flex align-self-stretch">
+                <div class="feature-box flex-column h-shadow mx-0" style="background-image: linear-gradient(#264653A8, #264653), url('demos/finance/images/services/5.jpg')">
+                  <div class="fbox-icon mb-4">
+                    <a href="#"><i class="icon-line-globe color-2"></i></a>
+                  </div>
+                  <div class="fbox-content">
+                    <h4 class="font-body fw-semibold h4 mb-4 mt-2 ls0 nott"> International Markets</h4>
+                    <p>Appropriately parallel task mission-critical communities after team building quality vectors seamlessly promote.</p>
+                    <a href="#" class="hover-button"><u>Read More</u> <i class="icon-line-arrow-right"></i></a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-4 col-md-6 d-flex align-self-stretch">
+                <div class="feature-box flex-column h-shadow mx-0" style="background-image: linear-gradient(#26465398, #264653), url('demos/finance/images/services/6.jpg')">
+                  <div class="fbox-icon mb-4">
+                    <a href="#"><i class="icon-line-briefcase color-2"></i></a>
+                  </div>
+                  <div class="fbox-content">
+                    <h4 class="font-body fw-semibold h4 mb-4 mt-2 ls0 nott"> Stocks &amp; Trades</h4>
+                    <p>Globally deploy cost effective internal, consectetur adipisicing elit. Eligendi rem, facilis nobis voluptatum est.</p>
+                    <a href="#" class="hover-button"><u>Read More</u> <i class="icon-line-arrow-right"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <img src="demos/finance/images/grid.svg" alt="Grid Image"  class="op-05" style="position: absolute; right: -30px; bottom: -30px; z-index: -1;">
+
+          </div>
         </div>
-
-        <p>Quod aut totam adipisci fugit dolor tempora quasi odit, qui aliquam fuga voluptatibus quas eos earum facilis corporis quibusdam eius! Molestiae dolorum nisi quod aperiam ullam libero qui autem alias laborum totam voluptatibus aliquam commodi nobis ipsum excepturi repellendus nihil labore est possimus magni aliquid, sed culpa ad explicabo! Esse, provident, autem.</p>
-
-        <a href="index.html" class="btn btn-secondary topmargin-sm">&lArr; Back to the Demo</a>
-
       </div>
     </div>
   </section><!-- #content end -->
