--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700|Poppins:300,400,500,600,700|PT+Serif:400,400i&display=swap" rel="stylesheet" type="text/css" />
   <link rel="stylesheet" href="css/bootstrap.css" type="text/css" />
   <link rel="stylesheet" href="css/style.css" type="text/css" />
+  <link rel="stylesheet" href="css/swiper.css" type="text/css" />
   <link rel="stylesheet" href="css/dark.css" type="text/css" />
   <link rel="stylesheet" href="css/font-icons.css" type="text/css" />
   <link rel="stylesheet" href="css/animate.css" type="text/css" />
   <link rel="stylesheet" href="css/magnific-popup.css" type="text/css" />
+  <link rel="stylesheet" href="css/custom.css" type="text/css" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
@@ -138,6 +140,7 @@
 ============================================= -->
 <script src="js/jquery.js"></script>
 <script src="js/plugins.min.js"></script>
+<script src="js/custom.js"></script>
 
 <!-- Footer Scripts
 ============================================= -->
