--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
             <h3 class="text-white nott ls0">Beware of Little Expenses, a small leak will sink a Great Ship.</h3>
           </div>
           <div class="services-grid gutter-30 position-relative">
-            <div style="background-image: url(demos/finance/images/grid.svg); position: absolute; top: 50%; left: 50%; width: 50vw; height: 50vh; opacity: .15; transform: translate(-50%, -50%);"></div>
+            <div style="background-image: url(images/grid.svg); position: absolute; top: 50%; left: 50%; width: 50vw; height: 50vh; opacity: .15; transform: translate(-50%, -50%);"></div>
             <img class="op-05" src="demos/finance/images/grid.svg" alt="Grid Image" style="position: absolute; left: -20px; top: -30px; z-index: -1;">
             <div class="row">
               <div class="col-lg-4 col-md-6 d-flex align-self-stretch">
-                <div class="feature-box flex-column h-shadow mx-0" style="background-image: linear-gradient(#2646532b, #264653f7), url('demos/finance/images/services/1.jpg')">
+                <div class="feature-box flex-column h-shadow mx-0" style="background-image: linear-gradient(#2646532b, #264653f7), url('images/services/1.jpg')">
                   <div class="fbox-icon mb-4">
                     <a href="#"><i class="icon-line-dollar-sign color-2"></i></a>
                   </div>
@@ -58,7 +58,7 @@
               </div>
 
               <div class="col-lg-4 col-md-6 d-flex align-self-stretch">
-                <div class="feature-box flex-column h-shadow mx-0" style="background-image: linear-gradient(#2646532b, #264653f7), url('demos/finance/images/services/2.jpg')">
+                <div class="feature-box flex-column h-shadow mx-0" style="background-image: linear-gradient(#2646532b, #264653f7), url('images/services/2.jpg')">
                   <div class="fbox-icon mb-4">
                     <a href="#"><i class="icon-line-paper color-2"></i></a>
                   </div>
@@ -71,7 +71,7 @@
               </div>
 
               <div class="col-lg-4 col-md-6 d-flex align-self-stretch">
-                <div class="feature-box flex-column h-shadow mx-0" style="background-image: linear-gradient(#264653A8, #264653), url('demos/finance/images/services/3.jpg')">
+                <div class="feature-box flex-column h-shadow mx-0" style="background-image: linear-gradient(#264653A8, #264653), url('images/services/3.jpg')">
                   <div class="fbox-icon mb-4">
                     <a href="#"><i class="icon-line-flag color-2"></i></a>
                   </div>
@@ -84,7 +84,7 @@
               </div>
 
               <div class="col-lg-4 col-md-6 d-flex align-self-stretch">
-                <div class="feature-box flex-column h-shadow mx-0" style="background-image: linear-gradient(#26465398, #264653), url('demos/finance/images/services/4.jpg')">
+                <div class="feature-box flex-column h-shadow mx-0" style="background-image: linear-gradient(#26465398, #264653), url('images/services/4.jpg')">
                   <div class="fbox-icon mb-4">
                     <a href="#"><i class="icon-line-users color-2"></i></a>
                   </div>
@@ -97,7 +97,7 @@
               </div>
 
               <div class="col-lg-4 col-md-6 d-flex align-self-stretch">
-                <div class="feature-box flex-column h-shadow mx-0" style="background-image: linear-gradient(#264653A8, #264653), url('demos/finance/images/services/5.jpg')">
+                <div class="feature-box flex-column h-shadow mx-0" style="background-image: linear-gradient(#264653A8, #264653), url('images/services/5.jpg')">
                   <div class="fbox-icon mb-4">
                     <a href="#"><i class="icon-line-globe color-2"></i></a>
                   </div>
@@ -110,7 +110,7 @@
               </div>
 
               <div class="col-lg-4 col-md-6 d-flex align-self-stretch">
-                <div class="feature-box flex-column h-shadow mx-0" style="background-image: linear-gradient(#26465398, #264653), url('demos/finance/images/services/6.jpg')">
+                <div class="feature-box flex-column h-shadow mx-0" style="background-image: linear-gradient(#26465398, #264653), url('images/services/6.jpg')">
                   <div class="fbox-icon mb-4">
                     <a href="#"><i class="icon-line-briefcase color-2"></i></a>
                   </div>
@@ -122,7 +122,7 @@
                 </div>
               </div>
             </div>
-            <img src="demos/finance/images/grid.svg" alt="Grid Image"  class="op-05" style="position: absolute; right: -30px; bottom: -30px; z-index: -1;">
+            <img src="images/grid.svg" alt="Grid Image"  class="op-05" style="position: absolute; right: -30px; bottom: -30px; z-index: -1;">
 
           </div>
         </div>
