--- a/index.html
+++ b/index.html
@@ -18,20 +18,110 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Document Title
-  ============================================= -->
-
-
 </head>
 
 <body class="stretched">
 
-<!-- Document Wrapper
-============================================= -->
 <div id="wrapper" class="clearfix">
 
 
+  <section id="content">
+    <div class="content-wrap py-5">
+      <div class="section dark bg-color" style="padding: 100px 0;">
+        <div class="container">
+          <div class="heading-block mw-xs mx-auto text-center mb-6">
+            <h5 class="font-body text-uppercase ls2 color-2">What we do</h5>
+            <h3 class="text-white nott ls0">Beware of Little Expenses, a small leak will sink a Great Ship.</h3>
+          </div>
+          <div class="services-grid gutter-30 position-relative">
+            <div style="background-image: url(images/grid.svg); position: absolute; top: 50%; left: 50%; width: 50vw; height: 50vh; opacity: .15; transform: translate(-50%, -50%);"></div>
+            <img class="op-05" src="images/grid.svg" alt="Grid Image" style="position: absolute; left: -20px; top: -30px; z-index: -1;">
+            <div class="row">
+              <div class="col-lg-4 col-md-6 d-flex align-self-stretch">
+                <div class="feature-box flex-column h-shadow mx-0" style="background-image: linear-gradient(#2646532b, #264653f7), url('images/1.jpg')">
+                  <div class="fbox-icon mb-4">
+                    <a href="#"><i class="icon-line-dollar-sign color-2"></i></a>
+                  </div>
+                  <div class="fbox-content">
+                    <h4 class="font-body fw-semibold h4 mb-4 mt-2 ls0 nott">Financial Services</h4>
+                    <p>Globally mesh multifunctional without competitive benefits. Synergistically procrastinate effective.</p>
+                    <a href="#" class="hover-button"><u>Read More</u> <i class="icon-line-arrow-right"></i></a>
+                  </div>
+                </div>
+              </div>
 
+              <div class="col-lg-4 col-md-6 d-flex align-self-stretch">
+                <div class="feature-box flex-column h-shadow mx-0" style="background-image: linear-gradient(#2646532b, #264653f7), url('images/2.jpg')">
+                  <div class="fbox-icon mb-4">
+                    <a href="#"><i class="icon-line-paper color-2"></i></a>
+                  </div>
+                  <div class="fbox-content">
+                    <h4 class="font-body fw-semibold h4 mb-4 mt-2 ls0 nott"> Audit & Taxes</h4>
+                    <p>Appropriately parallel task mission-critical communities after team building quality vectors seamlessly promote.</p>
+                    <a href="#" class="hover-button"><u>Read More</u> <i class="icon-line-arrow-right"></i></a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-4 col-md-6 d-flex align-self-stretch">
+                <div class="feature-box flex-column h-shadow mx-0" style="background-image: linear-gradient(#264653A8, #264653), url('images/3.jpg')">
+                  <div class="fbox-icon mb-4">
+                    <a href="#"><i class="icon-line-flag color-2"></i></a>
+                  </div>
+                  <div class="fbox-content">
+                    <h4 class="font-body fw-semibold h4 mb-4 mt-2 ls0 nott"> Business Planning</h4>
+                    <p>Globally deploy cost effective internal, consectetur adipisicing elit. Eligendi rem, facilis nobis voluptatum est.</p>
+                    <a href="#" class="hover-button"><u>Read More</u> <i class="icon-line-arrow-right"></i></a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-4 col-md-6 d-flex align-self-stretch">
+                <div class="feature-box flex-column h-shadow mx-0" style="background-image: linear-gradient(#26465398, #264653), url('images/4.jpg')">
+                  <div class="fbox-icon mb-4">
+                    <a href="#"><i class="icon-line-users color-2"></i></a>
+                  </div>
+                  <div class="fbox-content">
+                    <h4 class="font-body fw-semibold h4 mb-4 mt-2 ls0 nott">Acountants Experts</h4>
+                    <p>Globally mesh multifunctional without competitive benefits. Synergistically procrastinate effective.</p>
+                    <a href="#" class="hover-button"><u>Read More</u> <i class="icon-line-arrow-right"></i></a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-4 col-md-6 d-flex align-self-stretch">
+                <div class="feature-box flex-column h-shadow mx-0" style="background-image: linear-gradient(#264653A8, #264653), url('images/5.jpg')">
+                  <div class="fbox-icon mb-4">
+                    <a href="#"><i class="icon-line-globe color-2"></i></a>
+                  </div>
+                  <div class="fbox-content">
+                    <h4 class="font-body fw-semibold h4 mb-4 mt-2 ls0 nott"> International Markets</h4>
+                    <p>Appropriately parallel task mission-critical communities after team building quality vectors seamlessly promote.</p>
+                    <a href="#" class="hover-button"><u>Read More</u> <i class="icon-line-arrow-right"></i></a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-4 col-md-6 d-flex align-self-stretch">
+                <div class="feature-box flex-column h-shadow mx-0" style="background-image: linear-gradient(#26465398, #264653), url('images/6.jpg')">
+                  <div class="fbox-icon mb-4">
+                    <a href="#"><i class="icon-line-briefcase color-2"></i></a>
+                  </div>
+                  <div class="fbox-content">
+                    <h4 class="font-body fw-semibold h4 mb-4 mt-2 ls0 nott"> Stocks &amp; Trades</h4>
+                    <p>Globally deploy cost effective internal, consectetur adipisicing elit. Eligendi rem, facilis nobis voluptatum est.</p>
+                    <a href="#" class="hover-button"><u>Read More</u> <i class="icon-line-arrow-right"></i></a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <img src="images/grid.svg" alt="Grid Image"  class="op-05" style="position: absolute; right: -30px; bottom: -30px; z-index: -1;">
+
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
 </div><!-- #wrapper end -->
 
