--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+  <title>CAS</title>
+
 </head>
 
 <body class="stretched">
